--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "version": "1.0.1-0",
   "scripts": {
-    "postversion": "git push --follow-tags",
-    "set_tags": "echo \"$(node set_tag.js)\">.tags"
+    "postversion": "git push --follow-tags"
   }
 }
